objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Region_or_Mgr_Chg_or_Lving_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To help ensure eFax cross charges are correct</inlineHelpText>
        <label>Region or Mgr Chg or Lving Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_to_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Existing Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Another Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Managers__c</fullName>
        <label>Release Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reopened_Reason__c</fullName>
        <label>Reopened Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Additional Changes Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Error on Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <displayFormat>RQ-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Resource__c</fullName>
        <label>SA Resource</label>
        <picklist>
            <picklistValues>
                <fullName>Maggie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irfan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patti</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SF_BA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF BA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Config_Admins__c</fullName>
        <label>SF Config Admins</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Config_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SF Config Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Dev_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF Dev Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Developers__c</fullName>
        <label>SF Developers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Ops Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tool_Application_Affected__c</fullName>
        <label>Sales Tool/Application Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance__c</fullName>
        <label>Salesforce Instance</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MenuVantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIS/CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGT Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signer_Requested_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer Requested For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signer_Type__c</fullName>
        <label>Signer Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersigner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked (e.g. Waiting on something or someone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verfiication</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - BU Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Pre-Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config / Dev - Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment - Not Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment - Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment - Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New - Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity - Qualification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Dev_Start_Date__c</fullName>
        <label>Target Dev Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Test_Date__c</fullName>
        <label>Target Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Training_Date__c</fullName>
        <label>Target Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Notice_Notes__c</fullName>
        <label>Testing Notice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Groups_Impacted__c</fullName>
        <label>User Groups Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Mktg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - CrdtSvcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Data Librarians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Mktg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Traver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGT - Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGT - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV - Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR - Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR - Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIS - NIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIS - CustomerTouch</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All_Opportunities_ClosedLost</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>OPP_Closed_Lost_Reason__c</columns>
        <columns>OPP_Owner__c</columns>
        <columns>User__c</columns>
        <columns>OPP_Business_Unit__c</columns>
        <columns>OPP_FY_Initiative__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>OPP_Potential_Delivery_Center__c</columns>
        <columns>Initial_Estimate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Business_Unit_Priority__c</columns>
        <columns>Priority__c</columns>
        <columns>OPP_Has_Strategic_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities - Closed Lost</label>
        <language>en_US</language>
        <sharedTo>
            <group>Access_for_Request_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_ClosedWon</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OPP_Owner__c</columns>
        <columns>User__c</columns>
        <columns>OPP_Business_Unit__c</columns>
        <columns>OPP_FY_Initiative__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>OPP_Potential_Delivery_Center__c</columns>
        <columns>Initial_Estimate__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Aged_Days__c</columns>
        <columns>Business_Unit_Priority__c</columns>
        <columns>Priority__c</columns>
        <columns>OPP_Has_Strategic_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities - Closed Won</label>
        <language>en_US</language>
        <sharedTo>
            <group>Access_for_Request_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Open</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OPP_Owner__c</columns>
        <columns>User__c</columns>
        <columns>OPP_Business_Unit__c</columns>
        <columns>OPP_FY_Initiative__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>OPP_Potential_Delivery_Center__c</columns>
        <columns>Initial_Estimate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Business_Unit_Priority__c</columns>
        <columns>Priority__c</columns>
        <columns>OPP_Has_Strategic_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities - Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>Access_for_Request_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Requests_Open</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Owner_Full_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>SF_Config_Needed__c</columns>
        <columns>SF_Dev_Needed__c</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>Related_to_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <label>All Requests Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_not_to_Change_Board</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Config_Needed__c</columns>
        <columns>Assigned_Config__c</columns>
        <columns>Change_Classification__c</columns>
        <columns>User__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>SF_Dev_Needed__c</columns>
        <columns>Assigned_SF_Dev__c</columns>
        <columns>External_Dev__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>,Cancelled,Closed,On Hold,Cancelled - Duplicate</value>
        </filters>
        <filters>
            <field>SF_Config_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>SF Non-Dev Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Director_DS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Dev_Requests</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Owner_Full_Name__c</columns>
        <columns>Assigned_SF_Dev__c</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <filters>
            <field>SF_Dev_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Dev Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>User_Groups_Impacted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_Last_30_Days</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>Status__c</columns>
        <columns>SF_Config_Needed__c</columns>
        <columns>SF_Dev_Needed__c</columns>
        <columns>Assigned_Config__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>Date_Time_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_Last_Month</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>Date_Time_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests Last Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_Last_Quarter</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>Duration_to_Completion__c</columns>
        <columns>Change_Classification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_QUARTER</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests Last Quarter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_Last_Week</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Closed Requests Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_This_Fiscal</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>Adminstrators_Involved__c</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_YEAR</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests This Fiscal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_This_Month1</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>Status__c</columns>
        <columns>SF_Config_Needed__c</columns>
        <columns>SF_Dev_Needed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Assigned_SF_Dev__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_This_Week</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>Assigned_Config__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Date_Time_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Closed Requests This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Requests_to_the_Board</fullName>
        <columns>Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Project_to_Change_Board__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Groups_Impacted__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Project_to_Change_Board__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.SalesForce_Project</value>
        </filters>
        <label>Closed Requests From the Board</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Brief Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Custom_Dev_Project</fullName>
        <active>true</active>
        <description>Record type to be used by Patti Spelman</description>
        <label>Custom Dev Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>DocuSign_Anysigner_New_User</fullName>
        <active>true</active>
        <description>BDC Record Type for adding/Removing users to Docusign Anysigner mail box</description>
        <label>DocuSign Anysigner New User</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesForce_Project</fullName>
        <active>true</active>
        <label>SalesForce Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Saleso</fullName>
        <active>true</active>
        <description>For collecting information about a potential Salesforce project and track the activities and information gathered about it.</description>
        <label>Salesforce Project Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Do_not_close_Request_if_owned_by_Queue</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OwnerId = &apos;00G40000001LFRE&apos;, 
ISCHANGED( Status__c ),  
PRIORVALUE( Status__c )  &lt;&gt; &apos;Closed&apos;, 
ISPICKVAL( Status__c , &apos;Closed&apos;) )
&amp;&amp;
RecordType.Id= &quot;012400000009jnE&quot;</errorConditionFormula>
        <errorMessage>You cannot close a Request if it is owned by the Request Queue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RQST_AllRequestTeamMembers_Req</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) 
&amp;&amp; 
ISPICKVAL(Status__c, &apos;Completed&apos;) 
&amp;&amp; 
ISBLANK(All_Request_Team_Members__c) 
&amp;&amp; 
RecordType.Id= &quot;012400000009jnE&quot;</errorConditionFormula>
        <errorMessage>Please enter Request Team Members</errorMessage>
    </validationRules>
</CustomObject>